# zenoform

./: .dockerignore  .gitignore  AUDIT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC_AUDIT.md  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build.yml
cairo/terrain_v1/: Scarb.toml
cairo/terrain_v1/src/: commitment.cairo  fixed.cairo  lib.cairo  module.cairo  noise.cairo
crates/zenoform-cli/: Cargo.toml
crates/zenoform-cli/examples/: generate_test_vectors.rs
crates/zenoform-cli/src/: main.rs
crates/zenoform-core/: Cargo.toml
crates/zenoform-core/benches/: terrain_generation.rs
crates/zenoform-core/src/: chunk.rs  commitment.rs  coord.rs  fixed.rs  lib.rs  module.rs  noise.rs  proof.rs  seed_hash.rs
crates/zenoform-dsl/: Cargo.toml
crates/zenoform-dsl/src/: lib.rs  zenoform.pest
crates/zenoform-ffi/: Cargo.toml
crates/zenoform-ffi/src/: lib.rs
crates/zenoform-verifier/: Cargo.toml
crates/zenoform-verifier/src/: lib.rs
crates/zenoform-wasm/: Cargo.toml
crates/zenoform-wasm/src/: lib.rs
docs/: Zenoform_Protocol_Revised_Technical_Spec.md  protocol.md
dsl/examples/: terrain_v1.zf
examples/godot_verified_chunks/: project.godot  terrain_viewer.gd
mojo/zenoform_kernels/: noise.mojo  terrain.mojo
mojo/zenoform_kernels/benches/: bench_gen.mojo
test_vectors/terrain_v1/: manifest.json  seed_0001_chunk_-1_0_0.json  seed_0001_chunk_0_-1_0.json  seed_0001_chunk_0_0_0.json  seed_0001_chunk_0_1_0.json  seed_0001_chunk_1_0_0.json  seed_0042_chunk_-1_0_0.json  seed_0042_chunk_0_-1_0.json  seed_0042_chunk_0_0_0.json  seed_0042_chunk_0_1_0.json  seed_0042_chunk_1_0_0.json  seed_0123_chunk_-1_0_0.json  seed_0123_chunk_0_-1_0.json  seed_0123_chunk_0_0_0.json  seed_0123_chunk_0_1_0.json  seed_0123_chunk_1_0_0.json  seed_0999_chunk_-1_0_0.json  seed_0999_chunk_0_-1_0.json  seed_0999_chunk_0_0_0.json  seed_0999_chunk_0_1_0.json  seed_0999_chunk_1_0_0.json  seed_123_chunk_0_0_0.json  seed_1337_chunk_-1_0_0.json  seed_1337_chunk_0_-1_0.json  seed_1337_chunk_0_0_0.json  seed_1337_chunk_0_1_0.json  seed_1337_chunk_1_0_0.json
