[workspace]
members = [
    "crates/zenoform-core",
    "crates/zenoform-cli",
    "crates/zenoform-verifier",
    "crates/zenoform-ffi",
    "crates/zenoform-dsl",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
blake3 = "1.5"
starknet-crypto = "0.7"
