[package]
name = "zenoform-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoform-core = { path = "../zenoform-core" }
zenoform-verifier = { path = "../zenoform-verifier" }
zenoform-dsl = { path = "../zenoform-dsl" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
