[package]
name = "zenoform-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
zenoform-core = { path = "../zenoform-core" }
zenoform-verifier = { path = "../zenoform-verifier" }
godot = { version = "0.1", features = ["api-4-2"] } # Assuming Godot 4.2
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
