[package]
name = "zenoform-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
zenoform-core = { path = "../zenoform-core" }
zenoform-verifier = { path = "../zenoform-verifier" }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
