[package]
name = "zenoform-verifier"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
zenoform-core = { path = "../zenoform-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
base64 = "0.22"
